CLAS-519: Specifying claim status on retrieval of claim evidence.
